[package]
name = "regi"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Simple and safe access to MMIO and CPU registers"
homepage = "https://github.com/vbe0201/regi"
repository = "https://github.com/vbe0201/regi.git"
keywords = ["embedded", "registers", "mmio", "cpu", "bare-metal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
