[package]
name = "regi-impl"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Implementation details for the regi crate"
homepage = "https://github.com/vbe0201/regi"
repository = "https://github.com/vbe0201/regi.git"
keywords = ["embedded", "registers", "mmio", "cpu", "bare-metal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
